--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>H</span>
         <span>A</span>
-        <span>L</span>
-        <span>L</span>
-        <span>O</span>
-        <span> </span>
-        <span>A</span>
-        <span>L</span>
         <span>I</span>
         <span>K</span>
         <span>A</span>
+        <span>L</span>
+        <span> </span>
+        <span>S</span>
+        <span>Y</span>
+        <span>N</span>
+        <span>G</span>
     </div>
     <div class="description">
-        <span>Yafi punya bunga buat kamuuuu</span>
+        <span>WOI I LOVE YOU HAIKAL -yafi</span>
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Di sini cantik</a>
+            <a href="flower.html">ilyilyilyily</a>
         </button>
         
     </div>
